--- a/ProtelWebReports/Views/Report/Index.cshtml
+++ b/ProtelWebReports/Views/Report/Index.cshtml
@@ -12,7 +12,7 @@
                     <label for="reportId">Report ID:</label>
                     <select name="reportId" id="reportId" class="form-control" required>
                         <option value="">-- Select a Report --</option>
-                        <option value="hit_AvailabilityPeriod">Availability Period</option>
+                        <option value="hit_AvailabilityPeriod_newA">Availability Period</option>
                     </select>
                 </div>
 
